examples/test/testpolicy2421.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2421
  namespace: namespace118
spec:
  podSelector:
    matchLabels:
      key29: value6
      key42: value0
      key2: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value28
      podSelector:
        matchLabels:
          key18: value37
          key5: value42
          key45: value21
